src/components/Navigator.scss
#navigator .team
{
  width: 100%;
  color: #ffffff;
}

#navigator .team::before
{
  border-color: #ffffff;
}

#navigator .team .MuiSvgIcon-root
{
  color: #ffffff;
}

#navigator .logo
{
  width: 48px;
  height: auto;
  margin-right: 16px;
}

